tests/errors/named_unknown.vt
fn f(a: int) {} fn main(){ f(z: 3); }
